Imported all of John's changes of \!1045 bar mesh_gravity.c. Still need to adapt to the new strategy where the forces are not added straight to a_grav but to a_grav_mesh

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -65,6 +65,7 @@ include_HEADERS += space_unique_id.h line_of_sight.h io_compression.h
 include_HEADERS += rays.h rays_struct.h
 include_HEADERS += particle_splitting.h particle_splitting_struct.h
 include_HEADERS += chemistry_csds.h star_formation_csds.h
+include_HEADERS += mesh_gravity_mpi.h mesh_gravity_patch.h
 
 # source files for EAGLE cooling
 QLA_COOLING_SOURCES =
@@ -136,6 +137,7 @@ AM_SOURCES += chemistry.c cosmology.c mesh_gravity.c velociraptor_interface.c
 AM_SOURCES += output_list.c velociraptor_dummy.c csds_io.c memuse.c mpiuse.c memuse_rnodes.c
 AM_SOURCES += fof.c fof_catalogue_io.c
 AM_SOURCES += hashmap.c pressure_floor.c
+AM_SOURCES += mesh_gravity_mpi.c mesh_gravity_patch.c
 AM_SOURCES += runner_neutrino.c
 AM_SOURCES += neutrino/Default/fermi_dirac.c neutrino/Default/neutrino.c
 AM_SOURCES += $(QLA_COOLING_SOURCES) 
