Add a script to load the Wiersma+09 tables in the QLA example

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -132,7 +132,8 @@ EXTRA_DIST = Cooling/CoolingBox/coolingBox.yml Cooling/CoolingBox/plotEnergy.py 
              PMillennium/PMillennium-768/p-mill-768.yml \
              PMillennium/PMillennium-1536/p-mill-1536.yml \
 	     SantaBarbara/SantaBarbara-256/README SantaBarbara/SantaBarbara-256/getIC.sh SantaBarbara/SantaBarbara-256/santa_barbara.yml SantaBarbara/SantaBarbara-256/run.sh \
-	     SantaBarbara/SantaBarbara-128/README SantaBarbara/SantaBarbara-128/getIC.sh SantaBarbara/SantaBarbara-128/santa_barbara.yml SantaBarbara/SantaBarbara-128/run.sh
+	     SantaBarbara/SantaBarbara-128/README SantaBarbara/SantaBarbara-128/getIC.sh SantaBarbara/SantaBarbara-128/santa_barbara.yml SantaBarbara/SantaBarbara-128/run.sh \
+	     QuickLymanAlpha/getWiersmaTable.sh QuickLymanAlpha/getPloeckingerTable.sh QuickLymanAlpha/L050N0752/qla_50.yml QuickLymanAlpha/L050N0752/output_list.txt QuickLymanAlpha/L050N0752/getIC.sh QuickLymanAlpha/L050N0752/run.sh
 
 # Default parameter file
 EXTRA_DIST += parameter_example.yml
