--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ examples/*/*/*.rst
 examples/*/*/*.hdf5
 examples/*/*/*.csv
 examples/*/*/*.dot
+examples/*/*/*.ipynb
 examples/*/*/cell_hierarchy.html
 examples/*/*/energy.txt
 examples/*/*/task_level.txt
