--- a/examples/HydroTests/BrioWu_3D/BrioWu.yml
+++ b/examples/HydroTests/BrioWu_3D/BrioWu.yml
@@ -26,9 +26,9 @@ Statistics:
 
 # Parameters for the hydrodynamics scheme
 SPH:
-  resolution_eta:        1.2348    # Target smoothing length in units of the mean inter-particle separation (1.2348 == 48Ngbs with the cubic spline kernel).
+  resolution_eta:        1.32348    # Target smoothing length in units of the mean inter-particle separation (1.2348 == 48Ngbs with the cubic spline kernel).
   CFL_condition:         0.075    # Courant-Friedrich-Levy condition for time integration.
-  viscosity_alpha:       1.0
+  viscosity_alpha:       1.0     #0.8
 
 # Parameters related to the initial conditions
 InitialConditions:
