--- a/examples/HydroTests/OrszagTangVortex_3D/OrszagTangVortex.yml
+++ b/examples/HydroTests/OrszagTangVortex_3D/OrszagTangVortex.yml
@@ -10,7 +10,7 @@ InternalUnitSystem:
 TimeIntegration:
   time_begin: 0.    # The starting time of the simulation (in internal units).
   time_end:   1.0    # The end time of the simulation (in internal units).
-  dt_min:     5e-7  # The minimal time-step size of the simulation (in internal units).
+  dt_min:     1e-7  # The minimal time-step size of the simulation (in internal units).
   dt_max:     1e-2  # The maximal time-step size of the simulation (in internal units).
 
 # Parameters governing the snapshots
@@ -26,10 +26,16 @@ Statistics:
 
 # Parameters for the hydrodynamics scheme
 SPH:
-  resolution_eta:        1.35 #1.2348   # Target smoothing length in units of the mean inter-particle separation (1.2348 == 48Ngbs with the cubic spline kernel).
-  CFL_condition:         0.05      # Courant-Friedrich-Levy condition for time integration.
+  resolution_eta:        1.2348   # Target smoothing length in units of the mean inter-particle separation (1.2348 == 48Ngbs with the cubic spline kernel).
+  CFL_condition:         0.75    # Courant-Friedrich-Levy condition for time integration.
+  viscosity_alpha:       0.8
   
 # Parameters related to the initial conditions
 InitialConditions:
   file_name:  ./OrszagTangVortex.hdf5     # The file to read
   periodic:   1
+
+Scheduler:
+  max_top_level_cells:   32
+  tasks_per_cell:        100
+  cell_split_size:       200
