--- a/examples/HydroTests/BrioWu_3D/BrioWu.yml
+++ b/examples/HydroTests/BrioWu_3D/BrioWu.yml
@@ -9,7 +9,7 @@ InternalUnitSystem:
 # Parameters governing the time integration
 TimeIntegration:
   time_begin: 0.    # The starting time of the simulation (in internal units).
-  time_end:   0.2   # 0.2The end time of the simulation (in internal units).
+  time_end:   0.4   # 0.2The end time of the simulation (in internal units).
   dt_min:     1e-7  # The minimal time-step size of the simulation (in internal units).
   dt_max:     1e-2  # The maximal time-step size of the simulation (in internal units).
 
@@ -26,12 +26,14 @@ Statistics:
 
 # Parameters for the hydrodynamics scheme
 SPH:
-  resolution_eta:        1.32348    # Target smoothing length in units of the mean inter-particle separation (1.2348 == 48Ngbs with the cubic spline kernel).
+  resolution_eta:        1.2348    # Target smoothing length in units of the mean inter-particle separation (1.2348 == 48Ngbs with the cubic spline kernel).
   CFL_condition:         0.075    # Courant-Friedrich-Levy condition for time integration.
-  viscosity_alpha:       1.0     #0.8
+  viscosity_alpha:       2.0     #0.8
 
 # Parameters related to the initial conditions
 InitialConditions:
   file_name:  ./BrioWu.hdf5       # The file to read
   periodic:   1
 
+Scheduler:
+  max_top_level_cells: 26
