--- a/examples/HydroTests/BrioWu_3D/BrioWu.yml
+++ b/examples/HydroTests/BrioWu_3D/BrioWu.yml
@@ -9,7 +9,7 @@ InternalUnitSystem:
 # Parameters governing the time integration
 TimeIntegration:
   time_begin: 0.    # The starting time of the simulation (in internal units).
-  time_end:   0.4   # 0.2The end time of the simulation (in internal units).
+  time_end:   2.0   #4 times 0.4   # 0.2The end time of the simulation (in internal units).
   dt_min:     1e-7  # The minimal time-step size of the simulation (in internal units).
   dt_max:     1e-2  # The maximal time-step size of the simulation (in internal units).
 
@@ -17,7 +17,7 @@ TimeIntegration:
 Snapshots:
   basename:            BrioWu # Common part of the name of output files
   time_first:          0.       # Time of the first output (in internal units)
-  delta_time:          0.02      # Time difference between consecutive outputs (in internal units)
+  delta_time:          0.2      # Time difference between consecutive outputs (in internal units)
   compression:         1
   
 # Parameters governing the conserved quantities statistics
@@ -36,4 +36,4 @@ InitialConditions:
   periodic:   1
 
 Scheduler:
-  max_top_level_cells: 26
+  max_top_level_cells: 64
