--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ examples/*/*/*.xmf
 examples/*/*/*.dat
 examples/*/*/*.png
 examples/*/*/*.pdf
+examples/*/*/*.jpg
 examples/*/*/*.mp4
 examples/*/*/*.txt
 examples/*/*/*.rst
